--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -4,16 +4,28 @@
 {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent'}) }}
 
 {% if record.id %}
-    &nbsp;
 
-    {{ macro.button('action.preview', 'fa-external-link-square-alt', 'primary',  {'type': 'submit', 'form': 'editcontent', 'formtarget': '_blank', 'formaction': path('bolt_content_edit_preview', {'id': record.id }) }) }}
+    {{ macro.button(
+        'action.preview',
+        'fa-external-link-square-alt',
+        'primary',
+        {   'type': 'submit',
+            'form': 'editcontent',
+            'formtarget': '_blank',
+            'formaction': path('bolt_content_edit_preview', {'id': record.id })
+        })
+    }}
 
     {% if record.status == "published" %}
-    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split mb-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-primary dropdown-toggle dropdown-toggle-split mb-3" aria-expanded="false" aria-haspopup="true"
+            data-toggle="dropdown" type="button">
         <span class="sr-only">{{ 'buttons.button_toggle'|trans }}</span>
     </button>
-    <button type="submit" class="btn btn-light dropdown-menu dropdown-menu-right" form="editcontent"
-            formaction="{{ path('bolt_content_edit_viewsave', {'id': record.id }) }}" formtarget="_blank" style="white-space: nowrap; padding-right: 1rem;">
+    <button class="btn btn-light dropdown-menu dropdown-menu-right"
+            form="editcontent"
+            formaction="{{ path('bolt_content_edit_viewsave', {'id': record.id }) }}"
+            formtarget="_blank" style="white-space: nowrap; padding-right: 1rem;"
+            type="submit">
         <i class="fas fa-external-link-square-alt mr-2 ml-2"></i>
         {{ 'action.view_saved'|trans }}
     </button>
