--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -81,7 +81,7 @@
             <theme-select></theme-select>
             #}
 
-            <button type="submit" class="btn btn-primary">
+            <button class="btn btn-primary" type="submit">
                 <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
             </button>
 
