--- a/templates/_partials/fields/checkbox.html.twig
+++ b/templates/_partials/fields/checkbox.html.twig
@@ -6,7 +6,8 @@
            there to make sure an unchecked checkbox still shows up in the server
            response, so we can handle it there, if present. #}
         <input type="hidden" name="{{ name }}" value="0">
-        <input type="checkbox" class="custom-control-input" id="{{ name }}" name="{{ name }}" value="1" {{ value ? 'checked' }}>
+        <input class="custom-control-input" id="{{ name }}" name="{{ name }}" type="checkbox"
+               value="1" {{ value ? 'checked' }}>
         <label class="custom-control-label" for="{{ name }}">{{ label }}</label>
     </div>
 {% endblock %}
