--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -4,8 +4,7 @@
     {% if contentType %}
         <span class="admin__header--title__prefix">
             {# get this in proper with translations and label resouces #}
-            Overview for
-            »
+            {{ 'listing.title_overview'|trans }}
         </span>
         <i class='fas {{contentType.icon_one}}'></i>
         {{ contentType.name }}
@@ -43,7 +42,10 @@
         }|json_encode }}"
     ></listing-select-box>
 
-    {% set filterOptions = {'id': "Id", 'title': 'Title', 'Author': 'Author', 'status': 'Status', 'createdAt': 'Created date', 'modifiedAt': 'Modified date', 'publishedAt': 'Published date', 'depublishedAt': 'Depublished date'} %}
+    {% set filterOptions = {
+        'id': "Id", 'title': 'Title', 'Author': 'Author', 'status': 'Status', 'createdAt': 'Created date',
+        'modifiedAt': 'Modified date', 'publishedAt': 'Published date', 'depublishedAt': 'Depublished date'
+    } %}
     {% set sortBy = app.request.get('sort')|default() %}
     {% set filterValue = app.request.get('filter')|default() %}
 
@@ -56,7 +58,7 @@
                 <div class="form-group">
                     <p>
                         <strong>{{ 'listing.title_sortby'|trans }}</strong>:
-                        <select name="sort" class="form-control">
+                        <select class="form-control" name="sort">
                                 <option value="" disabled {% if sortBy is empty %}selected{% endif %}>
                                     {{ 'listing.option_select_item'|trans }}
                                 </option>
@@ -76,7 +78,11 @@
                 <div class="form-group">
                     <button class="btn btn-tertiary" type="submit">{{ 'listing.button_filter'|trans }}</button>
                     {% if sortBy is not empty or filterValue is not empty %}
-                        <a class="btn btn-danger" href="{{ path('bolt_content_overview', {'contentType': contentType.slug}) }}"><i class="fa fa-close"></i>{{ 'listing.button_clear'|trans }}</a>
+                        <a class="btn btn-danger"
+                           href="{{ path('bolt_content_overview', {'contentType': contentType.slug}) }}">
+                            <i class="fa fa-close"></i>
+                            {{ 'listing.button_clear'|trans }}
+                        </a>
                     {% endif %}
                 </div>
             </form>
