--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -51,7 +51,8 @@
             <td>&nbsp;</td>
             {% for locale in locales %}
                 <td>
-                    <a href="{{ path('bolt_content_edit', {'id': record.id, 'edit_locale': locale}) }}" class="btn btn-secondary btn-sm">
+                    <a class="btn btn-secondary btn-sm"
+                       href="{{ path('bolt_content_edit', {'id': record.id, 'edit_locale': locale}) }}">
                         {{ 'general.phrase.edit'|trans }}
                     </a>
                 </td>
