--- a/templates/finder/editfile.html.twig
+++ b/templates/finder/editfile.html.twig
@@ -30,7 +30,7 @@
             <textarea name="editfile" id="editfile_textarea">{{ contents }}</textarea>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary" name="save">{{ 'action.save'|trans }}</button>
+            <button class="btn btn-primary" name="save" type="submit">{{ 'action.save'|trans }}</button>
         </div>
     </div>
     </form>
