--- a/templates/pages/clearcache.html.twig
+++ b/templates/pages/clearcache.html.twig
@@ -10,7 +10,8 @@
 
     <div class="row">
         <div class="col-md-9">
-            <a href="{{ path('bolt_clear_cache') }}" class="btn btn-primary">{{ 'caption.clear_cache'|trans }}</a>
+            <a class="btn btn-primary"
+               href="{{ path('bolt_clear_cache') }}">{{ 'caption.clear_cache'|trans }}</a>
         </div>
     </div>
 
