--- a/templates/pages/extensions.html.twig
+++ b/templates/pages/extensions.html.twig
@@ -51,12 +51,14 @@
                 </a>
                 {% endif %}
                 {% if package|default() %}
-                    <a class="btn btn-hidden-danger btn-small ml-1 float-right" href="" data-confirmation="Not yet implemented. Sorry!">
+                    <a class="btn btn-hidden-danger btn-small ml-1 float-right" href=""
+                       data-confirmation="{{ 'extensions.message_not_implemented'|trans }}">
                         <i class="fas fa-trash-alt"></i>{{ 'extensions.button_remove'|trans }}
                     </a>
                 {% endif %}
 
-                <a class="btn btn-tertiary btn-small float-right" href="" data-confirmation="Not yet implemented. Sorry!">
+                <a class="btn btn-tertiary btn-small float-right" href=""
+                   data-confirmation="{{ 'extensions.message_not_implemented'|trans }}">
                     <i class="fas fa-ban"></i>{{ 'extensions.button_disable'|trans }}
                 </a>
             </div>
