Allow PNG (and WEBP and SVG) as image uploads

--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -4,7 +4,7 @@
 
     {% if record|default %}
 
-        <h1><a href="{{ record|link }}">{{ record|title }}</a></h1>
+        <h1><a href="{{ record|link }}">{{ record|title|rot13 }}</a></h1>
 
         {# Remove this block if you don't need it anymore. #}
         {{ include('partials/_fresh_install.twig') }}
