Fix Missing labels in templates

--- a/templates/_partials/_content_listing.html.twig
+++ b/templates/_partials/_content_listing.html.twig
@@ -29,6 +29,7 @@
             'created_on': 'listing_table.actions.created_on'|trans,
             'published_on': 'listing_table.actions.published_on'|trans,
             'last_modified_on': 'listing_table.actions.last_modified_on'|trans,
+            'button_edit': 'listing_table.actions.button_edit'|trans,
         }
     }|json_encode }}"
     ></listing-table>
