aligment of ui control buttons on listings like view mode, pagers, checkbox

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -104,6 +104,7 @@ $yiq-contrasted-threshold:  150;
 :root {
   --background: #f3f5f7;
   --foreground: #FFF;
+  --foreground-border: #e8e8e8;
   --primary: #255687;
   --shade: #666;
   --shade-light: #ddd;
