--- a/templates/users/listing.html.twig
+++ b/templates/users/listing.html.twig
@@ -14,13 +14,13 @@
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col" class="text-nowrap">Display name</th>
-            <th scope="col" class="text-nowrap">Username</th>
-            <th scope="col" class="text-nowrap">Email</th>
-            <th scope="col" class="text-nowrap">Roles</th>
-            <th scope="col" class="text-nowrap">Last seen</th>
-            <th scope="col" class="text-nowrap">Last IP</th>
-            <th scope="col" class="text-nowrap">Actions</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_display_name'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_username'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_email'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_roles'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_last_seen'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_last_ip'|trans }}</th>
+            <th scope="col" class="text-nowrap">{{ 'listing.title_actions'|trans }}</th>
 
         </tr>
         </thead>
