Validation allows empty roles but template doesn't handles - fix

--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -63,7 +63,7 @@
 
             {% set roleOptions = [] %}
 
-            {% for roleName, roleHierarchy in roles %}
+            {% for roleName, roleHierarchy in roles ?? [] %}
                 {% set roleOptions = roleOptions|merge([
                     {
                         'key': roleName,
