--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -1,7 +1,11 @@
 {% extends '@bolt/_base/layout.html.twig' %}
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% block title %}
- {{ 'title.edit_user'|trans }} » {{ display_name|default('Unknown') }}
+    <span class="admin__header--title__prefix">
+        {{ 'title.edit_user'|trans }}
+    </span>
+    {{ macro.icon('user') }} {{ display_name|default(__('user.unknown_user')) }}
 {% endblock %}
 
 {% block vue_id 'editor' %}
@@ -41,7 +45,6 @@
                 'class': 'form-control',
             } %}
 
-
             {% set localeOptions = [] %}
 
             {% for locale in locales() %}
@@ -60,12 +63,15 @@
                 'options' : localeOptions,
             } %}
 
+            {# TODO: Should a user be allowed to modify their own user level? think not.. #}
+            {#
             {% include '@bolt/_partials/fields/select.html.twig' with {
                 'label' : 'label.roles'|trans,
                 'name' : 'roles',
                 'value' : user.roles,
                 'options' : [],
             } %}
+            #}
 
             {# TODO: include form field with '@bolt/_partials/fields/select.html.twig' #}
             {# Comment out for a while, until we work on this again
