Working on dutch translations

--- a/public/theme/skeleton/partials/_footer.twig
+++ b/public/theme/skeleton/partials/_footer.twig
@@ -7,11 +7,11 @@
 
     <hr>
 
-    <h4>{{ __('Search') }}</h4>
+    <h4>{{ __('general.phrase.search') }}</h4>
 
     <form method="get" action="{{ path('search') }}" id="searchform-inline" enctype="text/plain">
         <input type="search" value="{{ searchTerm|default() }}" placeholder="{{ __('general.phrase.search-ellipsis') }}" name="searchTerm" >
-        <button type="submit">{{ __('general.phrase.search') }}</button>
+        <button type="submit">{{ __('action.search') }}</button>
     </form>
 
     <hr>
