Preparing release 4.0.0 beta 2.

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -3,7 +3,8 @@
 {% block title %}
     <span class="admin__header--title__prefix">
         {{ 'caption.about_bolt'|trans }} »
-    </span> 
+    </span>
+    <i class='fas fa-award'></i>
     {{ 'caption.bolt_payoff'|trans }}
 {% endblock title %}
 
@@ -36,7 +37,7 @@
             <i class="fa fa-book"></i> {{ 'about.bolt_documentation'|trans }}
         </a>
         <a href="https://github.com/bolt" class="btn btn-secondary" target="_blank">
-            <i class="fab fa-github-alt"></i> {{ 'about.bolt_on_github'|trans }}
+            <i class="fa fa-external-link-square-alt"></i> {{ 'about.bolt_on_github'|trans }}
         </a>
     </p>
 
@@ -47,7 +48,7 @@
     <ul>
         <li>The awesome <a href="https://symfony.com/" target="_blank">Symfony 4, PHP framework</a> and a lot of the
             <a href="https://symfony.com/components" target="_blank">Symfony components</a>.</li>
-        <li>The <a href="https://www.doctrine-project.org" target="_blank">Doctrine</a> for database access, abstraction and object mapping.</li>
+        <li>The <a href="https://www.doctrine-project.org" target="_blank">Doctrine</a> library for database access, abstraction and object mapping.</li>
         <li><a href="https://twig.sensiolabs.org/" target="_blank">Twig</a> - flexible, fast, and secure template engine</a>.</li>
         <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a> and
             <a href="https://fontawesome.com/" target="_blank">Font Awesome</a>.</li>
